--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,8 @@
       }
     ],
     "paths": {
+      "@/components/*": ["./src/components/*"],
+      "@/lib/*": ["./src/lib/*"],
       "@/*": ["./src/*"]
     }
   },
